<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_interests"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="22dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interests"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/tvInterestMusic"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:text="@string/interest_music"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />

            <TextView
                android:id="@+id/tvInterestPhotography"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:text="@string/interest_photography"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />

            <TextView
                android:id="@+id/tvInterestTravel"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:text="@string/interest_travel"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/tvInterestDeepTalks"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:text="@string/interest_deep_talks"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />

            <TextView
                android:id="@+id/tvInterestReadBook"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:text="@string/interest_read_books"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected"/>

            <TextView
                android:id="@+id/tvInterestWalking"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:text="@string/interest_walking"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/tvInterestPets"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:text="@string/interest_pets_animal_lover"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />

            <TextView
                android:id="@+id/tvInterestCooking"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:text="@string/interest_cooking"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/chip_unselected" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
