<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_rounded"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/imgSheetArrow"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_handle"
    android:contentDescription="@null"
    android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/tvUnmatch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/dialog_chat_more_txt1"
        android:textSize="18sp"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/dialog_chat_more_txt2"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>

    <TextView
        android:id="@+id/tvDeleteConversation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/dialog_chat_more_txt3"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>

    <TextView
        android:id="@+id/tvBlock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/dialog_chat_more_txt4"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tvUnBlock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/dialog_chat_more_txt5"
        android:textSize="18sp"
        android:textColor="#000000"
        android:visibility="gone"/>
</LinearLayout>
