<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:ignore="MissingClass">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:tint="#FF6500" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="#FF6500"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/forgot_pass_reset_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/passwordFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"
            android:paddingHorizontal="12dp"
            android:textColorHint="#A9A9A9"
            android:layout_marginBottom="26dp"
            android:drawableEnd="@drawable/ic_eye_off" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"
            android:paddingHorizontal="12dp"
            android:textColorHint="#A9A9A9"
            android:drawableEnd="@drawable/ic_eye_off" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#FF0058"
            android:visibility="gone"
            android:text="@string/forgot_pass_reset_text2">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#FF0058"
            android:layout_marginTop="26dp"
            android:visibility="gone"
            android:text="@string/forgot_pass_reset_text1">
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/forgot_pass_reset_btn"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="#000000"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
