<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:tint="#FF6500" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="#FF6500"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:text="@string/contact_us_title"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#777777"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/contact_us_h1"
        android:textStyle="bold"
        android:textColor="#333"
        android:layout_marginBottom="12dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/layoutContactSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_stoke"
        android:padding="16dp"

        android:orientation="vertical">

        <TextView
            android:text="@string/contact_us_h2"
            android:textStyle="bold"
            android:textColor="#333"
            android:layout_marginBottom="12dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="12dp">

            <ImageView
                android:src="@drawable/ic_phone"
                android:layout_width="22dp"
                android:layout_height="22dp"/>

            <LinearLayout
                android:id="@+id/phoneContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/contact_us_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#777777"/>

                <TextView
                    android:id="@+id/tvPhone"
                    android:text="+84 325043590"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_mail"
                android:layout_width="22dp"
                android:layout_height="22dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/contact_us_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#777777"/>

                <TextView
                    android:id="@+id/tvEmail"
                    android:text="ducthang30082004@gmail.com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#000"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
